# money

./: .gitignore  BoaScrape.hs  Main.hs  ManageDB.hs  Money.hs  ParseCSV.hs  Server.hs  TODO  Util.hs  boascrape.hs  money.cabal  money.hs  server.hs
api/: default.nix  money-api.cabal
api/src/Money/: API.hs
backend/: build  money-backend.cabal  shell.nix  stack.yaml
backend/src/: API.hs  DB.hs  Main.hs  Money.hs  Plaid.hs  Scrapers.hs  Util.hs
backend/src/Crypto/Cipher/AES/: Util.hs
backend/src/Data/Aeson/: Util.hs
backend/src/Data/List/: Util.hs
backend/src/Scrapers/: BankOfAmerica.hs  Common.hs
backend/src/Scrapers/Browser/: Log.hs
backend/src/Text/HandsomeSoup/: Util.hs
elm-frontend/: API.elm  AmountFilter.elm  Decoders.elm  Encoders.elm  Filter.elm  Main.elm  Model.elm  Util.elm  View.elm  elm-package.json  inotify-script
frontend/: .gitignore  Main.hs  build  clean  elm-ui.json  inotify  money-frontend.cabal  shell.nix  stack.yaml
frontend/servedir/: ghcjs-out
frontend/source/: Main.elm
frontend/source/List/: Util.elm
frontend/src/: ClientAPI.hs  FilterExpr.hs  HTML.hs  Main.hs  Util.hs
frontend/stylesheets/: main.scss
src/: DB.hs  Main.hs  Money.hs  ParseCSV.hs  Scrapers.hs
src/Data/Maybe/: Util.hs
src/Scrapers/: BankOfAmerica.hs  Browser.hs  Common.hs
src/Scrapers/Browser/: Log.hs
src/Text/Show/Pretty/: Util.hs
static/: .gitignore  Inputs.elm  JsonUtils.elm  Main.elm  Model.elm  Utils.elm  View.elm  build.sh  index.html  index.jmacro  index.js  jmPrelude.jmacro  util.js
static/elm/: .gitignore  Transaction.elm  build.sh
static_root/static/: index.html
