Name:                money-frontend
Version:             0.1
License-file:        LICENSE
Author:              Karshan Sharma
Maintainer:          karshan.sharma@gmail.com
Build-type:          Simple
Cabal-version:       >=1.8

Executable money-frontend
   hs-source-dirs:
       src/
   main-is: Main.hs
   build-depends:
       base,
       containers,
       data-default-class,
       reflex,
       reflex-dom,
       servant,
       text,
       time,
       either,
       transformers,
       ghcjs-dom,
       ghcjs-base,
       ghcjs-prim,
       ghcjs-servant-client,
       aeson,
       money-api, parsec, lens
   ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans
   extensions: RecursiveDo
