Name:                money-frontend
Version:             0.1
License-file:        LICENSE
Author:              Karshan Sharma
Maintainer:          karshan.sharma@gmail.com
Build-type:          Simple
Cabal-version:       >=1.8

Executable money-frontend
   hs-source-dirs:
       src/
   main-is: Main.hs
   build-depends:
       base,
       mtl,
       blaze-html,
       blaze-markup,
       ixset-typed,
       bytestring,
       cereal,
       safecopy,
       money-api,
       containers,
       data-default-class,
       text,
       time,
       either,
       transformers,
       ghcjs-dom,
       ghcjs-base,
       ghcjs-prim,
       parsec,
       lens,
       servant,
       servant-client
   ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans
   extensions: RecursiveDo
